welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	if (nums(i) == value) {
		return value
	} else {
		return -1
	}
}
